--- a/app/views/shared/_altmetric_dimensions.html.erb
+++ b/app/views/shared/_altmetric_dimensions.html.erb
@@ -1,5 +1,4 @@
 <% if controller_name == "monograph_catalog" %>
-
   <div class="metrics">
     <% if @presenter.isbn_noformat.present? %>
     <script type='text/javascript' src='https://d1bxh8uas1mnw7.cloudfront.net/assets/embed.js'></script>
@@ -9,5 +8,16 @@
         <span class="__dimensions_badge_embed__" data-doi="<%= @presenter.doi_path %>" data-hide-zero-citations="true" data-legend="never" data-style="large_rectangle"></span><script async src="https://badge.dimensions.ai/badge.js" charset="utf-8"></script>
     <% end %>
   </div>
-
+    <% if @presenter&.previous_edition_presenter&.doi_path&.present? || @presenter&.previous_edition_presenter&.isbn_noformat&.first&.present? %>
+      <div class="previous-edition-metrics">
+      <%= @presenter&.previous_edition_presenter&.edition_name %>
+    <% if @presenter&.previous_edition_presenter&.isbn_noformat&.present? %>
+      <script type='text/javascript' src='https://d1bxh8uas1mnw7.cloudfront.net/assets/embed.js'></script>
+      <div data-badge-type="1" data-isbn="<%= @presenter&.previous_edition_presenter&.isbn_noformat&.first %>" data-hide-no-mentions="true" class="altmetric-embed"></div>
+    <% end %>
+    <% if @presenter.doi.present? %>
+      <span class="__dimensions_badge_embed__" data-doi="<%= @presenter&.previous_edition_presenter&.doi_path %>" data-hide-zero-citations="true" data-legend="never" data-style="large_rectangle"></span><script async src="https://badge.dimensions.ai/badge.js" charset="utf-8"></script>
+    <% end %>
+      </div>
+    <% end %>
 <% end %>
