--- a/app/views/catalog/_facet_layout.html.erb
+++ b/app/views/catalog/_facet_layout.html.erb
@@ -1,9 +1,9 @@
 <div class="panel panel-default facet_limit blacklight-<%= facet_field.key.parameterize %> <%= 'facet_limit-active' if facet_field_in_params?(facet_field) %>">
-  <div tabindex="0" role="button" class="panel-heading facet-field-heading collapse-toggle <%= "collapsed" if should_collapse_facet?(facet_field, display_facet) %>" data-toggle="collapse" data-target="#<%= facet_field_id(facet_field) %>" aria-expanded="<%= !should_collapse_facet?(facet_field, display_facet) %>">
+  <div tabindex="0" role="button" class="panel-heading facet-field-heading collapse-toggle <%= "collapsed" if should_collapse_facet?(facet_field) %>" data-toggle="collapse" data-target="#<%= facet_field_id(facet_field) %>" aria-expanded="<%= !should_collapse_facet?(facet_field) %>">
     <span class="sr-only">Filter search results by</span>
     <h3 class="panel-title"><%= facet_field_label(facet_field.key) %></h3>
   </div>
-  <div id="<%= facet_field_id(facet_field) %>" class="panel-collapse facet-content <%= should_collapse_facet?(facet_field, display_facet) ? 'collapse' : 'in' %>">
+  <div id="<%= facet_field_id(facet_field) %>" class="panel-collapse facet-content <%= should_collapse_facet?(facet_field) ? 'collapse' : 'in' %>">
     <div class="panel-body">
       <%= yield %>
     </div>
