--- a/app/views/monograph_catalog/_index_monograph.html.erb
+++ b/app/views/monograph_catalog/_index_monograph.html.erb
@@ -58,10 +58,10 @@
     <% if @presenter.funder_display? %>
       <span aria-label="funder display" class="funder_display"><i><%= @presenter.funder_display %></i></span>
     <% end %>
-    <% if @presenter.open_access? %>
-      <div class="open-access">
-        <%= image_tag 'oa-lock-logo.png', alt: "Open Access icon", class: 'img-responsive' %>
-        <span>OPEN ACCESS</span>
+    <% if @presenter.access_level(@actor_product_ids, @allow_read_product_ids).show? %>
+      <div>
+        <%= @presenter.access_level(@actor_product_ids, @allow_read_product_ids).icon_lg.html_safe %>
+        <span><%= @presenter.access_level(@actor_product_ids, @allow_read_product_ids).text.html_safe %></span>
       </div>
     <% end %>
     <div class="description">
@@ -71,12 +71,25 @@
         <div class="btn-toolbar" role="toolbar">
           <div class="btn-group btn-group-lg" role="group">
             <% if @presenter.reader_ebook? %>
+              <% if @disable_read_button %>
+                <a id="monograph-read-btn"
+                   href=""
+                   title="<%= t('monograph_catalog.index.read', title: @presenter.page_title) %>"
+                   aria-label="<%= t('monograph_catalog.index.read', title: @presenter.page_title) %>"
+                   class="btn btn-default"
+                   data-turbolinks="false"
+                   aria-disabled="true"
+                   disabled>
+                   <%= t('monograph_catalog.index.read_book') %>
+                </a>
+              <% else %>
                 <a id="monograph-read-btn"
                    href="<%= epub_path(@presenter.reader_ebook) %>"
                    class="btn btn-default"
                    data-turbolinks="false">
                    <%= t('monograph_catalog.index.read_book') %>
                 </a>
+              <% end %>
             <% end %>
             <% if @ebook_download_presenter.downloadable_ebooks? %>
                 <div class="btn-group btn-group-lg">
