--- a/app/views/shared/_metadata.html.erb
+++ b/app/views/shared/_metadata.html.erb
@@ -1,10 +1,15 @@
 <% if controller_name == "monograph_catalog" %>
 
   <meta name="citation_title" content="<%= @presenter.page_title %>">
+  <meta property="og:title" content="<%= @presenter.page_title %>">
+  <meta property="twitter:card" content="summary">
+  <meta property="twitter:title" content="<%= @presenter.page_title %>">
+
 
   <% if @presenter.present? %>
     <% @presenter.creator.each do |creator_name| %>
       <meta name="citation_author" content="<%= creator_name %>">
+      <meta name="twitter:creator" content="<%= creator_name %>">
     <% end %>
   <% end %>
 
@@ -24,10 +29,23 @@
   <% else %>
     <meta name="citation_hdl" content="<%= @presenter.handle_path %>">
     <meta name="DC.Identifier" content="<%= @presenter.handle_url %>">
+    <meta name="og:url" content="<%= @presenter.citable_link %>">
   <% end %>
 
   <% if @presenter.publisher.present? %>
     <meta name="citation_publisher" content="<%= @presenter.publisher.first %>">
+  <% end %>
+
+  <% if @presenter.description.present? %>
+    <meta name="og:description" content="<%= MarkdownService.markdown_as_text(@presenter.description.first) %>">
+    <meta name="twitter:description" content="<%= MarkdownService.markdown_as_text(@presenter.description.first) %>">"
+  <% end %>
+
+  <% if @presenter.representative_id.present? %>
+    <meta name="og:image" content="<%= @presenter.thumbnail_tag(225) %>">
+    <meta name="twitter:image" content="<%= @presenter.thumbnail_tag(225) %>">
+    <%# this is terrible alt text. But like 99% of cover image file_set alt_text fields are blank... %>
+    <meta name="og:image:alt" content="Cover Image for <%= @presenter.page_title %>">
   <% end %>
 
 <% elsif controller_name == "file_sets" %>
