--- a/app/views/e_pubs/show.html.erb
+++ b/app/views/e_pubs/show.html.erb
@@ -149,7 +149,7 @@ ereader_survey_titles = %w[
         var reader = cozy.reader('reader', {
           // See https://tools.lib.umich.edu/jira/browse/HELIO-3350 and https://stackoverflow.com/a/47331356
           // Hopefully this line can be removed eventually. Note these are the epub FileSet's NOIDs.
-          <% if %w[cc08hh07v x059c8342 t722h883s ws859h272 4t64gq185 3n204094k].include? @presenter.id %>...(bowser.safari && bowser.version >= 13 ? {flow: 'scrolled-doc'} : {}),<% end %>
+          <% if %w[cc08hh07v x059c8342 t722h883s ws859h272 4t64gq185 3n204094k sx61dp14z].include? @presenter.id %>...(bowser.safari && bowser.version >= 13 ? {flow: 'scrolled-doc'} : {}),<% end %>
           href: "<%= "#{main_app.epub_url.gsub!(/\?.*/, '')}/" %>",
           skipLink: '.skip',
           download_links: <%= @ebook_download_presenter.csb_download_links.to_json.html_safe %>,
