--- a/app/views/monograph_catalog/_case_insensitive_sort_facet.html.erb
+++ b/app/views/monograph_catalog/_case_insensitive_sort_facet.html.erb
@@ -1,10 +1,11 @@
 <ul class="facet-values list-unstyled">
   <% paginator = facet_paginator(facet_field, display_facet) %>
-  <%= render_facet_limit_list reorder_section_facet(@presenter, paginator), field_name %>
+  <%= render_facet_limit_list case_insensitive_sort_facet(paginator), field_name %>
 
   <% unless paginator.last_page? || params[:action] == "facet" %>
     <li class="more_facets_link">
-      <%= link_to t("more_#{field_name}_html", scope: 'blacklight.search.facets', default: :more_html, field_name: facet_field.label),
+      <%= link_to t("more_#{field_name}_html", scope: 'blacklight.search.facets', default: :more_html,
+                    field_name: facet_field.label),
         search_facet_path(id: field_name, monograph_id: @presenter.id), class: "more_facets_link" %>
     </li>
   <% end %>
