a11y color contrast on HEB links

--- a/app/assets/stylesheets/application/themes.scss
+++ b/app/assets/stylesheets/application/themes.scss
@@ -71,7 +71,7 @@ $heliotrope-highlight-background: #002c63;
 // colors
 $heb-brand-color: #111;
 $heb-accent-color: #d5d6d2;
-$heb-link: red;
+$heb-link: #c50000;
 $heb-red: #cc0000;
 $heb-accent-footer: #989c97;
 
@@ -80,7 +80,7 @@ $heb-accent-link: #989c97;
 $heb-grey-1: #d5d6d2;
 $heb-grey-2: #989c97;
 $heb-grey-3: #655a52;
-$heb-grey-4: #ccc;
+$heb-grey-4: #ddd;
 $heb-white: #fff;
 $heb-black-80: #342f2e;
 
