--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -13,7 +13,7 @@
   </hgroup>
 </header>
 <% if press_presenter.present? && controller_name == "press_catalog" %>
-  <% unless press_presenter.press.aboutware? %>
+  <% unless @search_ongoing == true || press_presenter.press.aboutware? %>
     <%= render 'shared/brand_press_jumbotron' %>
   <% end %>
 <% end %>
