Are Third-Party Cookies enabled?

--- a/app/views/press_statistics/index.html.erb
+++ b/app/views/press_statistics/index.html.erb
@@ -51,6 +51,7 @@
                 </div>
               </div>
             </div>
+            <p>Not seeing the graphs? Third-Party Cookies must be enabled (<a href="https://www.whatismybrowser.com/detect/are-third-party-cookies-enabled" target="_blank">check here</a>). Strict tracker blocking will also cause issues. Please adjust browser settings and reload.</p>
           </section>
         <% end %>
       </div>
