--- a/app/views/hyrax/file_sets/media_display/_image_service.html.erb
+++ b/app/views/hyrax/file_sets/media_display/_image_service.html.erb
@@ -1,12 +1,12 @@
 <%# a partial that allows side-stepping hydra-derivatives by using riiif for FileSets %>
 <% if file_set.allow_download? %>
   <%= link_to hyrax.download_path(file_set), target: "_new", title: file_set.download_button_label do %>
-    <%= image_tag '/image-service/' + file_set.id + '/full/350,/0/default.png' + file_set.browser_cache_breaker,
+    <%= image_tag '/image-service/' + file_set.id + file_set.browser_cache_breaker + '/full/350,/0/default.png',
                   class: "img-responsive asset-page-image",
                   alt: file_set.download_button_label + ', titled "' +  file_set.page_title.delete('"') + '"' %>
   <% end %>
 <% else %>
-  <%= image_tag '/image-service/' + file_set.id + '/full/350,/0/default.png' + file_set.browser_cache_breaker,
+  <%= image_tag '/image-service/' + file_set.id + file_set.browser_cache_breaker + '/full/350,/0/default.png',
                 class: "img-responsive asset-page-image",
                 alt: 'Thumbnail of "' + file_set.page_title.delete('"') + '"',
                 role: 'presentation' %>
