--- a/app/views/hyrax/file_sets/media_display_embedded/_leaflet_image.html.erb
+++ b/app/views/hyrax/file_sets/media_display_embedded/_leaflet_image.html.erb
@@ -1,4 +1,4 @@
-<% riiif_url = "/image-service/#{file_set.id}/info.json#{file_set.browser_cache_breaker}" %>
+<% riiif_url = "/image-service/#{file_set.id}#{file_set.browser_cache_breaker}/info.json" %>
 <div id="image" style="height:100%;"></div>
 <script>
     var map, layer, timer;
