--- a/app/views/monograph_catalog/_thumbnail_list_file_set.html.erb
+++ b/app/views/monograph_catalog/_thumbnail_list_file_set.html.erb
@@ -2,7 +2,7 @@
 <%- if has_thumbnail?(document) && tn = render_thumbnail_tag(document, {alt: fs_presenter.alt_text}, counter: document_counter_with_offset(document_counter)) %>
   <div class="document-thumbnail col-sm-3">
     <% if fs_presenter.use_riiif_for_icon? %>
-      <% icon_string = '<img src="/image-service/' + fs_presenter.id + '/full/200,/0/default.png' + fs_presenter&.browser_cache_breaker + '" >' %>
+      <% icon_string = '<img src="/image-service/' + fs_presenter.id + fs_presenter&.browser_cache_breaker + '/full/200,/0/default.png' + '">' %>
       <%= tn.gsub(/<img.*>/, icon_string).html_safe %>
     <% elsif fs_presenter.use_glyphicon? %>
       <%= tn.gsub(/<img.*>/, fs_presenter.gylphicon + "<br/></a>".html_safe).html_safe %>
