--- a/app/views/score_catalog/_index_gallery_file_set_wrapper.html.erb
+++ b/app/views/score_catalog/_index_gallery_file_set_wrapper.html.erb
@@ -2,7 +2,7 @@
 <div class="document col-xs-6 col-md-3">
   <div class="thumbnail">
     <% if fs_presenter.use_riiif_for_icon? %>
-      <% icon_string = '<img src="/image-service/' + fs_presenter.id + '/full/200,/0/default.png' + fs_presenter&.browser_cache_breaker + '" >' %>
+      <% icon_string = '<img src="/image-service/' + fs_presenter.id + fs_presenter&.browser_cache_breaker + '/full/200,/0/default.png' + '">' %>
       <% tn = render_thumbnail_tag(document, {}, counter: document_counter_with_offset(document_counter)) %>
       <%= tn.gsub(/<img.*>/, icon_string).html_safe %>
     <% elsif fs_presenter.use_glyphicon? %>
